--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     }
   ],
   "require": {
+    "php": ">=5.5",
     "illuminate/database": "5.1.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "JJSquad\\LaravelModelExtensions\\" : "src"
+    }
   }
 }
